@@ -3,7 +3,7 @@
 ##
 ## This file is part of the Score-P software (http://www.score-p.org)
 ##
-## Copyright (c) 2017,
+## Copyright (c) 2017, 2022,
 ## Technische Universitaet Dresden, Germany
 ##
 ## This software may be modified and distributed under the terms of
@@ -28,18 +28,14 @@ scorep_library_wrapper_generator_CPPFLAGS = \
     $(AM_CPPFLAGS) \
     $(UTILS_CPPFLAGS) \
     -I$(INC_ROOT)src/tools/lib \
-    @SCOREP_LIBRARY_WRAPPING_GENERATOR_CPPFLAGS@
-
-scorep_library_wrapper_generator_CXXFLAGS = \
-    $(AM_CXXFLAGS) \
-    @SCOREP_LIBRARY_WRAPPING_GENERATOR_CXXFLAGS@
+    $(SCOREP_LIBRARY_WRAPPING_GENERATOR_CPPFLAGS)
 
 scorep_library_wrapper_generator_LDFLAGS = \
     $(AM_LDFLAGS) \
-    @SCOREP_LIBRARY_WRAPPING_GENERATOR_LDFLAGS@
+    $(SCOREP_LIBRARY_WRAPPING_GENERATOR_LDFLAGS)
 
 scorep_library_wrapper_generator_LDADD = \
-    @SCOREP_LIBRARY_WRAPPING_GENERATOR_LIBS@ \
+    $(SCOREP_LIBRARY_WRAPPING_GENERATOR_LIBS) \
     libscorep_filter.la \
     libscorep_tools.la \
     libutils.la
